--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   palette_generator: ^0.3.3+3
   scrollable_positioned_list: ^0.3.8
   flutter_bounceable: ^1.1.0
+  fluentui_system_icons: ^1.1.210
+  provider: ^6.1.1
   http:
   intl:
 
